--- a/src/components/ChatView/styling/ChatView.scss
+++ b/src/components/ChatView/styling/ChatView.scss
@@ -18,6 +18,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  min-height: 0;
   position: relative;
 
   .str-chat__chat-view__selector {
@@ -136,6 +137,7 @@
     display: flex;
     flex-grow: 1;
     min-width: 0;
+    min-height: 0;
     position: relative;
   }
 
