--- a/src/components/MessageList/styling/MessageList.scss
+++ b/src/components/MessageList/styling/MessageList.scss
@@ -2,6 +2,7 @@
 
 // Layout
 .str-chat__main-panel-inner {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
