--- a/src/styling/_utils.scss
+++ b/src/styling/_utils.scss
@@ -77,6 +77,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   overscroll-behavior: contain;
+  scrollbar-gutter: stable;
 }
 
 @mixin modal {
@@ -104,6 +105,7 @@
 @mixin header-layout {
   display: flex;
   align-items: center;
+  width: 100%;
   padding: var(--spacing-md);
   gap: var(--spacing-sm);
   height: var(--str-chat__channel-header-height);
